lib_LIBRARIES = libEngineCore.a
libEngineCore_a_SOURCES = \
Allocator.h             GLBufferObject.h        PixelBuffer.cpp \
CGShaderObject.h        GLFrameBufferObject.h   PixelBuffer.h \
CameraTask.h            GLShaderObject.h        Profiler.h \
CaptureTask.h           Geometry.h              PropertySet.h \
CommonDefines.h         InputTask.h             Reference.h \
CommonIncludes.h        Interpolator.h          Singleton.h \
ConsoleTask.h           Kernel.h                Texture.cpp \
DateTime.h              Log.h                   Texture.h \
Dator.h                 TimerTask.h \
EngineCore.h            Matrix.h                Trigger.h \
Factory.h               Noise.cpp               VideoTask.h \
Font.h                  Noise.h \
Functor.h               Object.h

